kubernetes/robin/apps/dev/forgejo/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      filters:
        - requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
          type: RequestHeaderModifier
      timeouts:
        request: 300s
